--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<link rel="icon" type="image/png" href="image/favicon.ico">
-		<title>Anh Yeu Em </title>	    
+		<title>Chúc mừng 20/10 </title>	    
         <link type="text/css" rel="stylesheet" href="./renxi/default.css">
 		<script type="text/javascript" src="./renxi/jquery.min.js"></script>
 		<script type="text/javascript" src="./renxi/jscex.min.js"></script>
@@ -23,21 +23,22 @@
 					<source src="music/lsiii.mp3" type="audio/mp3" />
 			</audio>  
         <div id="main">
-            <div id="error">Trình duyệt của bạn không được hỗ trợ. Để được hỗ trợ liên hệ hungplayvn@gmail.com. Hoặc sử dụng (<a href="http://www.google.cn/chrome">Chrome</a>) và (<a href="http://firefox.com/download/">Firefox</a>)</div>
+            <div id="error">Trình duyệt của bạn không được hỗ trợ. Để được hỗ trợ liên hệ Thangreg141@gmail.com. Hoặc sử dụng (<a href="http://www.google.cn/chrome">Chrome</a>) và (<a href="http://firefox.com/download/">Firefox</a>)</div>
              <div id="wrap">
                 <div id="text">
 			        <div id="code">
-                        <font color="#0000FF"><span class="say">Mình có điều muốn nói với cậu nàyy</span><br>
-						<span class="say">Nay là 14/2, mình mong cậu sớm có được mình </span><br>
-						<span class="say">Cậu đọc được dòng này thì nhớ inbox fb mình nhé<33</span><br>
-						<span class="say">Mình chỉ cho cậu rep thôi đó hihi</span><br>
+                        <font color="#0000FF"><span class="say">Xin chúc cô và các bạn nữ </span><br>
+						<span class="say">Nay là 20/10, chúc cô và các bạn có </span><br>
+						<span class="say"> một ngày 20/10 vui vẻ bên gia đình, ngưởi thân</span><br>
+						<span class="say">chúc cô và các bạn luôn luôn xinh đẹp </span><br>
+						<span class="say">và thành công trong công việc, học tập</span><br>
 						
 					
 			  </font></p>
       </div>
                 </div>
                 <div id="clock-box">
-                    <span class="STYLE1"></span><font color= "#F0000" >I Love You <3</font>
+                    <span class="STYLE1"></span><font color= "#F0000" >Alles Liebe zum Weltfrauentag!</font>
 
               </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
